# better_launch

./: CMakeLists.txt  README.md  package.xml
better_launch/: convenience.py  declarative.py  gazebo.py  launcher.py  orchestration.py  wrapper.py
better_launch/declarative/: __init__.py  declarative.py  substitutions.py  toml_parser.py
better_launch/elements/: abstract_node.py  composer.py  foreign_node.py  lifecycle_manager.py  node.py  ros2_launch_wrapper.py
better_launch/tui/: better_tui.py
better_launch/utils/: better_logging.py  click.py  colors.py  random_names.py
docs/benchmarks/results/pyspy/: speedscope-bl.json
docs/source/: better_launch.declarative.rst  better_launch.utils.rst
examples/: 02_ui.launch.py  06_includes.launch.py  09_convenience.launch.py  10_gazebo.launch.py  12_controllers.launch.py  12_declarative.launch.toml  13_declarative.launch.toml  community.md  control_config.yaml  minimal_robot.urdf  ros2_include.launch.py  test.launch.py
srv/: GetLaunchfileStatus.srv  KillNode.srv  OrchesterTransition.srv
tests/: benchmark_translator.py  test_launcher.py  test_parameter_translation.py
